# Structurer

./: Cargo.toml  README.md
src/: config.rs  gui_elements.rs  main.rs  markup.rs  node_controls.rs  node_physics.rs  node_view.rs  popup_windows.rs  save_load.rs
src/popups/: add_tags_popup.rs  confirm_deletion_popup.rs  export_popup.rs  node_view_popup.rs  point_datetime_popup.rs  point_image_popup.rs  point_source_popup.rs  share_point_link_title_popup.rs  share_point_lint_title_popup.rs  tags_popup.rs  timeline_popup.rs  title_delete_popup.rs  title_edit_popup.rs  title_image_popup.rs
src/save_load/: general.rs  image.rs  link.rs  point.rs  share.rs  source.rs  tag.rs  title.rs
