[package]
name = "structurer_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = {version ="0.28"}
egui_extras = {version ="0.28"}
env_logger = {version ="0.11.3"}
rfd = {version ="0.14.1"}
tokio = {version = "1.38.0", features = ["fs"]}
uuid = {version = "1.9.1", features =["v4", "fast-rng"]}
