[package]
name = "structurer_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = {version = "0.28.1"}
eframe = {version ="0.28.1"}
egui_extras = {version ="0.28.1", features=["all_loaders"]}
image = {version = "0.25.1", features = ["jpeg" , "png"]}
env_logger = {version ="0.11.3"}
rfd = {version ="0.14.1"}
tokio = {version = "1.38.0", features = ["fs"]}
uuid = {version = "1.9.1", features =["v4", "fast-rng"]}
dirs = {version = "5.0.1"}
serde = {version ="1.0.203"}
serde_json = {version = "1.0.120"}
rand = {version = "0.8.5"}
